z-index fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,11 @@
     --body-copy: 3.5vw;
     --body-copy-line-height: calc(var(--body-copy)*1.3);
 
-    --desktop-copy:1vw;
+    --desktop-copy:0.9vw;
     --desktop-copy-line-height:calc(var(--desktop-copy)*1.2);
+
+    --columns: 1;
+    --grid-gap: 2em;
 }
 
 
@@ -34,17 +37,14 @@ body
 
 .description
 {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    padding: auto;
+    display: grid;
+    grid-template-columns: repeat(var(--columns),1fr);
+    gap: calc(var(--grid-gap)/2.5);
     color: white;
     margin-top: 50px;
-}
-
-h1
-{
-    margin-bottom: 20px;
+    position: sticky;
+    top: 50px;
+    z-index: -1;
 }
 
 .links
@@ -56,24 +56,16 @@ h1
 a
 {
     color: #3dff50;
-    font-weight: 500;
 }
 
 .work
 {
-    --columns: 1;
-    --grid-gap: 1.5em;
     display: grid;
     grid-template-columns: repeat(var(--columns),1fr);
     gap: var(--grid-gap);
-    justify-content: center;
-    align-items: center;
     margin-bottom: 150px;
-}
-
-img
-{
-    margin-top: 20px;
+    margin-top: 30px;
+    background-color: #1f1f1f;
 }
 
 figcaption
@@ -81,7 +73,7 @@ figcaption
     color: white;
     margin: auto;
     padding: auto;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 /*media query*/
@@ -101,18 +93,11 @@ figcaption
     }
     .description
     {
+        --columns: 1;
         flex-direction: row;
-        margin-top: 100px;
-    }
-
-    .empty
-    {
-        margin-right: 34%;
-    }
-
-    .about
-    {
-        width: 45%;
+        margin-top: 50px;
+        gap: calc(var(--grid-gap)/2.5);
+        width: 20vw;
     }
 
     .links
@@ -122,6 +107,24 @@ figcaption
 
     .work
     {
-        --columns: 3;
+        --columns: 4;
+        gap: calc(var(--grid-gap)*2);
+        margin-top: 100px;
+    }
+
+    img
+    {
+        transition: all 1s ease-out;
+    }
+
+    img:hover
+    {
+        transform: scale(1.5);
+    }
+
+    figcaption
+    {
+        margin-top: 10px;
+        width: 100%;
     }
 }
